--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run tests and generate coverage
         run: |
-          coverage run -m unittest discover
+          coverage run -m unittest discover .\tests\
           coverage html
           coverage xml
 
