--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,9 @@ jobs:
           python-version: 3.12
 
       - name: Install dependencies
-        run: pip install -e .
+        run: |
+          pip install -e .
+          pip install coverage 
 
       - name: Run tests and generate coverage
         run: |
