--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run tests and generate coverage
         run: |
-          coverage run -m unittest discover .\tests\
+          coverage run -m unittest discover ./tests
           coverage html
           coverage xml
 
